--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,9 @@
         android:required="true" />
 
     <application
+        android:hardwareAccelerated="true"
         android:name=".application.MyApplication"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
         android:icon="@mipmap/application_icon"
         android:label="@string/app_name"
         android:largeHeap="true"
