--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,8 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-arm64:0.7.8.1'
     compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.7.8.1'
     compile 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.7.8.1'
+    // ExoPlayer as IMediaPlayer: optional, experimental
+    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.8.1'
     compile('com.twitter.sdk.android:twitter:1.9.0@aar') {
         transitive = true;
     }
